lib/flutter_opencv_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/flutter_opencv.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class FlutterOpencvBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FlutterOpencvBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FlutterOpencvBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Version
  ffi.Pointer<ffi.Char> opencv_version() {
    return _opencv_version();
  }

  late final _opencv_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'opencv_version',
      );
  late final _opencv_version = _opencv_versionPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// Memory Management
  ffi.Pointer<CvMat> cv_mat_create() {
    return _cv_mat_create();
  }

  late final _cv_mat_createPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvMat> Function()>>(
        'cv_mat_create',
      );
  late final _cv_mat_create = _cv_mat_createPtr
      .asFunction<ffi.Pointer<CvMat> Function()>();

  void cv_mat_release(ffi.Pointer<CvMat> mat) {
    return _cv_mat_release(mat);
  }

  late final _cv_mat_releasePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<CvMat>)>>(
        'cv_mat_release',
      );
  late final _cv_mat_release = _cv_mat_releasePtr
      .asFunction<void Function(ffi.Pointer<CvMat>)>();

  /// Image I/O
  ffi.Pointer<CvMat> cv_imread(ffi.Pointer<ffi.Char> filename) {
    return _cv_imread(filename);
  }

  late final _cv_imreadPtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<CvMat> Function(ffi.Pointer<ffi.Char>)>
      >('cv_imread');
  late final _cv_imread = _cv_imreadPtr
      .asFunction<ffi.Pointer<CvMat> Function(ffi.Pointer<ffi.Char>)>();

  int cv_imwrite(ffi.Pointer<ffi.Char> filename, ffi.Pointer<CvMat> mat) {
    return _cv_imwrite(filename, mat);
  }

  late final _cv_imwritePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<CvMat>)
        >
      >('cv_imwrite');
  late final _cv_imwrite = _cv_imwritePtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<CvMat>)>();

  ffi.Pointer<CvMat> cv_imdecode(ffi.Pointer<ffi.Uint8> data, int len) {
    return _cv_imdecode(data, len);
  }

  late final _cv_imdecodePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<CvMat> Function(ffi.Pointer<ffi.Uint8>, ffi.Int)
        >
      >('cv_imdecode');
  late final _cv_imdecode = _cv_imdecodePtr
      .asFunction<ffi.Pointer<CvMat> Function(ffi.Pointer<ffi.Uint8>, int)>();

  BytesResult cv_imencode(ffi.Pointer<ffi.Char> ext, ffi.Pointer<CvMat> mat) {
    return _cv_imencode(ext, mat);
  }

  late final _cv_imencodePtr =
      _lookup<
        ffi.NativeFunction<
          BytesResult Function(ffi.Pointer<ffi.Char>, ffi.Pointer<CvMat>)
        >
      >('cv_imencode');
  late final _cv_imencode = _cv_imencodePtr
      .asFunction<
        BytesResult Function(ffi.Pointer<ffi.Char>, ffi.Pointer<CvMat>)
      >();

  void cv_free_bytes(BytesResult bytes) {
    return _cv_free_bytes(bytes);
  }

  late final _cv_free_bytesPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(BytesResult)>>(
        'cv_free_bytes',
      );
  late final _cv_free_bytes = _cv_free_bytesPtr
      .asFunction<void Function(BytesResult)>();

  /// Basic Processing
  ffi.Pointer<CvMat> cv_cvtColor_bgr2gray(ffi.Pointer<CvMat> mat) {
    return _cv_cvtColor_bgr2gray(mat);
  }

  late final _cv_cvtColor_bgr2grayPtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<CvMat> Function(ffi.Pointer<CvMat>)>
      >('cv_cvtColor_bgr2gray');
  late final _cv_cvtColor_bgr2gray = _cv_cvtColor_bgr2grayPtr
      .asFunction<ffi.Pointer<CvMat> Function(ffi.Pointer<CvMat>)>();

  /// Transforms
  ffi.Pointer<CvMat> cv_resize(
    ffi.Pointer<CvMat> mat,
    int width,
    int height,
    int interpolation,
  ) {
    return _cv_resize(mat, width, height, interpolation);
  }

  late final _cv_resizePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<CvMat> Function(
            ffi.Pointer<CvMat>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
          )
        >
      >('cv_resize');
  late final _cv_resize = _cv_resizePtr
      .asFunction<
        ffi.Pointer<CvMat> Function(ffi.Pointer<CvMat>, int, int, int)
      >();

  /// mode: 0=x-axis, 1=y-axis, -1=both
  ffi.Pointer<CvMat> cv_flip(ffi.Pointer<CvMat> mat, int mode) {
    return _cv_flip(mat, mode);
  }

  late final _cv_flipPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<CvMat> Function(ffi.Pointer<CvMat>, ffi.Int)
        >
      >('cv_flip');
  late final _cv_flip = _cv_flipPtr
      .asFunction<ffi.Pointer<CvMat> Function(ffi.Pointer<CvMat>, int)>();

  /// code: 0=90cw, 1=180, 2=90ccw
  ffi.Pointer<CvMat> cv_rotate(ffi.Pointer<CvMat> mat, int code) {
    return _cv_rotate(mat, code);
  }

  late final _cv_rotatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<CvMat> Function(ffi.Pointer<CvMat>, ffi.Int)
        >
      >('cv_rotate');
  late final _cv_rotate = _cv_rotatePtr
      .asFunction<ffi.Pointer<CvMat> Function(ffi.Pointer<CvMat>, int)>();

  /// Filters
  ffi.Pointer<CvMat> cv_gaussian_blur(
    ffi.Pointer<CvMat> mat,
    int kernelSize,
    double sigma,
  ) {
    return _cv_gaussian_blur(mat, kernelSize, sigma);
  }

  late final _cv_gaussian_blurPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<CvMat> Function(ffi.Pointer<CvMat>, ffi.Int, ffi.Double)
        >
      >('cv_gaussian_blur');
  late final _cv_gaussian_blur = _cv_gaussian_blurPtr
      .asFunction<
        ffi.Pointer<CvMat> Function(ffi.Pointer<CvMat>, int, double)
      >();

  ffi.Pointer<CvMat> cv_canny(
    ffi.Pointer<CvMat> mat,
    double threshold1,
    double threshold2,
  ) {
    return _cv_canny(mat, threshold1, threshold2);
  }

  late final _cv_cannyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<CvMat> Function(
            ffi.Pointer<CvMat>,
            ffi.Double,
            ffi.Double,
          )
        >
      >('cv_canny');
  late final _cv_canny = _cv_cannyPtr
      .asFunction<
        ffi.Pointer<CvMat> Function(ffi.Pointer<CvMat>, double, double)
      >();

  /// Drawing (In-place)
  void cv_rectangle(
    ffi.Pointer<CvMat> mat,
    int x,
    int y,
    int width,
    int height,
    int r,
    int g,
    int b,
    int thickness,
  ) {
    return _cv_rectangle(mat, x, y, width, height, r, g, b, thickness);
  }

  late final _cv_rectanglePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<CvMat>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
          )
        >
      >('cv_rectangle');
  late final _cv_rectangle = _cv_rectanglePtr
      .asFunction<
        void Function(
          ffi.Pointer<CvMat>,
          int,
          int,
          int,
          int,
          int,
          int,
          int,
          int,
        )
      >();

  void cv_circle(
    ffi.Pointer<CvMat> mat,
    int centerX,
    int centerY,
    int radius,
    int r,
    int g,
    int b,
    int thickness,
  ) {
    return _cv_circle(mat, centerX, centerY, radius, r, g, b, thickness);
  }

  late final _cv_circlePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<CvMat>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
          )
        >
      >('cv_circle');
  late final _cv_circle = _cv_circlePtr
      .asFunction<
        void Function(ffi.Pointer<CvMat>, int, int, int, int, int, int, int)
      >();

  void cv_line(
    ffi.Pointer<CvMat> mat,
    int x1,
    int y1,
    int x2,
    int y2,
    int r,
    int g,
    int b,
    int thickness,
  ) {
    return _cv_line(mat, x1, y1, x2, y2, r, g, b, thickness);
  }

  late final _cv_linePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<CvMat>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
          )
        >
      >('cv_line');
  late final _cv_line = _cv_linePtr
      .asFunction<
        void Function(
          ffi.Pointer<CvMat>,
          int,
          int,
          int,
          int,
          int,
          int,
          int,
          int,
        )
      >();

  ffi.Pointer<CvVideoCapture> cv_videocapture_create(int index) {
    return _cv_videocapture_create(index);
  }

  late final _cv_videocapture_createPtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<CvVideoCapture> Function(ffi.Int)>
      >('cv_videocapture_create');
  late final _cv_videocapture_create = _cv_videocapture_createPtr
      .asFunction<ffi.Pointer<CvVideoCapture> Function(int)>();

  void cv_videocapture_release(ffi.Pointer<CvVideoCapture> cap) {
    return _cv_videocapture_release(cap);
  }

  late final _cv_videocapture_releasePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<CvVideoCapture>)>
      >('cv_videocapture_release');
  late final _cv_videocapture_release = _cv_videocapture_releasePtr
      .asFunction<void Function(ffi.Pointer<CvVideoCapture>)>();

  int cv_videocapture_read(
    ffi.Pointer<CvVideoCapture> cap,
    ffi.Pointer<CvMat> dst,
  ) {
    return _cv_videocapture_read(cap, dst);
  }

  late final _cv_videocapture_readPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<CvVideoCapture>, ffi.Pointer<CvMat>)
        >
      >('cv_videocapture_read');
  late final _cv_videocapture_read = _cv_videocapture_readPtr
      .asFunction<
        int Function(ffi.Pointer<CvVideoCapture>, ffi.Pointer<CvMat>)
      >();

  double cv_videocapture_get(ffi.Pointer<CvVideoCapture> cap, int propId) {
    return _cv_videocapture_get(cap, propId);
  }

  late final _cv_videocapture_getPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Double Function(ffi.Pointer<CvVideoCapture>, ffi.Int)
        >
      >('cv_videocapture_get');
  late final _cv_videocapture_get = _cv_videocapture_getPtr
      .asFunction<double Function(ffi.Pointer<CvVideoCapture>, int)>();

  void cv_videocapture_set(
    ffi.Pointer<CvVideoCapture> cap,
    int propId,
    double value,
  ) {
    return _cv_videocapture_set(cap, propId, value);
  }

  late final _cv_videocapture_setPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<CvVideoCapture>, ffi.Int, ffi.Double)
        >
      >('cv_videocapture_set');
  late final _cv_videocapture_set = _cv_videocapture_setPtr
      .asFunction<void Function(ffi.Pointer<CvVideoCapture>, int, double)>();

  /// Accessors
  int cv_mat_width(ffi.Pointer<CvMat> mat) {
    return _cv_mat_width(mat);
  }

  late final _cv_mat_widthPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<CvMat>)>>(
        'cv_mat_width',
      );
  late final _cv_mat_width = _cv_mat_widthPtr
      .asFunction<int Function(ffi.Pointer<CvMat>)>();

  int cv_mat_height(ffi.Pointer<CvMat> mat) {
    return _cv_mat_height(mat);
  }

  late final _cv_mat_heightPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<CvMat>)>>(
        'cv_mat_height',
      );
  late final _cv_mat_height = _cv_mat_heightPtr
      .asFunction<int Function(ffi.Pointer<CvMat>)>();

  int cv_mat_channels(ffi.Pointer<CvMat> mat) {
    return _cv_mat_channels(mat);
  }

  late final _cv_mat_channelsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<CvMat>)>>(
        'cv_mat_channels',
      );
  late final _cv_mat_channels = _cv_mat_channelsPtr
      .asFunction<int Function(ffi.Pointer<CvMat>)>();

  ffi.Pointer<ffi.Uint8> cv_mat_data(ffi.Pointer<CvMat> mat) {
    return _cv_mat_data(mat);
  }

  late final _cv_mat_dataPtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<CvMat>)>
      >('cv_mat_data');
  late final _cv_mat_data = _cv_mat_dataPtr
      .asFunction<ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<CvMat>)>();

  int cv_mat_data_len(ffi.Pointer<CvMat> mat) {
    return _cv_mat_data_len(mat);
  }

  late final _cv_mat_data_lenPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<CvMat>)>>(
        'cv_mat_data_len',
      );
  late final _cv_mat_data_len = _cv_mat_data_lenPtr
      .asFunction<int Function(ffi.Pointer<CvMat>)>();

  late final addresses = _SymbolAddresses(this);
}

class _SymbolAddresses {
  final FlutterOpencvBindings _library;
  _SymbolAddresses(this._library);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<CvMat>)>>
  get cv_mat_release => _library._cv_mat_releasePtr;
  ffi.Pointer<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<CvVideoCapture>)>
  >
  get cv_videocapture_release => _library._cv_videocapture_releasePtr;
}

/// Opaque pointer to cv::Mat
typedef CvMat = ffi.Void;
typedef DartCvMat = void;

final class BytesResult extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Int()
  external int len;
}

/// Opaque pointer to cv::VideoCapture
typedef CvVideoCapture = ffi.Void;
typedef DartCvVideoCapture = void;
